--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "colcon build",
             "type": "shell",
-            "command": "bash -i -c colcon build",
+            "command": "bash -i -c colcon build --mixin release lld",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -26,12 +26,12 @@
         {
             "label": "create cpp pkg",
             "type": "shell",
-            "command": "bash -i -c 'cd workspace/src && ros2 pkg create --build-type ament_cmake --node-name ${input:nodeName} ${input:packageName}'"
+            "command": "bash -i -c 'cd src && ros2 pkg create --build-type ament_cmake --node-name ${input:nodeName} ${input:packageName}'"
         },
         {
             "label": "create py pkg",
             "type": "shell",
-            "command": "bash -i -c 'cd workspace/src && ros2 pkg create --build-type ament_python --node-name ${input:nodeName} ${input:packageName}'"
+            "command": "bash -i -c 'cd src && ros2 pkg create --build-type ament_python --node-name ${input:nodeName} ${input:packageName}'"
         },
         {
             "label": "xserver",
